--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "redux": "*",
     "style-loader": "*",
     "webpack": "*"
+  },
+  "dependencies": {
+    "file-loader": "^0.11.0",
+    "react-addons-update": "^15.4.2"
   }
 }
