--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack": "*"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "file-loader": "^0.11.0",
     "react-addons-update": "^15.4.2"
   }
