--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "file-loader": "^0.11.0",
-    "react-addons-update": "^15.4.2"
+    "node-sass": "^4.5.2",
+    "react-addons-update": "^15.4.2",
+    "sass-loader": "^6.0.3"
   }
 }
